<resources>
    <string name="app_name">Direct Messaging</string>
    <string name="hint">Type a message</string>
    <string name="idle">Idle</string>
    <string name="todo">TODO</string>
    <string name="group_chat">Group Chat</string>
    <string name="send_a_message">Send a message.</string>
    <string name="chat_name">chat name</string>
    <string name="previous_message">previous message</string>
    <string name="last_date">last date</string>
    <string name="stock_image_for_the_chat_room_icon">stock image for the chat room icon</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
</resources>