<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:theme="@style/BackgroundEditTheme"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:autofillHints="@string/username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorHighlight="#DCDCDC"
        android:textColorHint="#BF969696"
        android:textColorLink="#DCDCDC"
        android:textIsSelectable="false"
        android:visibility="visible" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:autofillHints="@string/password"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorHighlight="#DCDCDC"
        android:textColorHint="#BF969696"
        android:textColorLink="#DCDCDC"
        android:textIsSelectable="false"
        android:visibility="visible" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/login" />


</RelativeLayout>