<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#1E1E1E">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/idle"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#C8C8C8" />


    <TextView
        android:id="@+id/chatTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBack"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/group_chat"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DCDCDC"
        android:visibility="visible" />

    <TextView
        android:id="@+id/chatWindow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msgBox"
        android:layout_below="@+id/chatTitle"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:textColor="#E6E6E6"
        android:textColorHint="#FFFFFF"
        android:visibility="visible" />

    <EditText
        android:id="@+id/msgBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:autofillHints="Send a message."
        android:hapticFeedbackEnabled="false"
        android:hint="@string/send_a_message"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="false"
        android:textColor="#DCDCDC"
        android:textColorHighlight="#DCDCDC"
        android:textColorHint="#80DCDCDC"
        android:textColorLink="#DCDCDC"
        android:textIsSelectable="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/abc_vector_test"
        android:textAllCaps="false"
        tools:ignore="PrivateResource" />

</RelativeLayout>
